--- a/.github/workflows/build-game.yml
+++ b/.github/workflows/build-game.yml
@@ -19,3 +19,15 @@ jobs:
         uses: coactions/setup-xvfb@v1
         with:
           run: racket cardgame.rkt
+
+      - name: "Post to PR"
+        uses: EliLillyCo/github-actions-post-to-pr@main
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          post_to_pr_definition: |
+          [
+            {
+              "message_file": "./cards/basegame.png",
+              "title": "My Test Execution"
+            }
+          ]
