--- a/.github/workflows/build-game.yml
+++ b/.github/workflows/build-game.yml
@@ -20,14 +20,7 @@ jobs:
         with:
           run: racket cardgame.rkt
 
-      - name: "Post to PR"
-        uses: EliLillyCo/github-actions-post-to-pr@main
+      - uses: actions/upload-artifact@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          post_to_pr_definition: |
-            [
-              {
-                "message_file": "./cards/basegame.png",
-                "title": "My Test Execution"
-              }
-            ]
+          name: cards-artifact
+          path: cards
