player: split slide from pict

--- a/player/Makefile
+++ b/player/Makefile
@@ -1,6 +1,6 @@
 
 all: play_random play_greedy
-	raco make game.rhm pict.rhm play_random.rhm play_greedy.rhm
+	raco make game.rhm slide.rhm play_random.rhm play_greedy.rhm
 
 play_random:
 	raco exe --launcher play_random.rhm
