repairs, more player programs, and distro build
 play_simple <> play_random

 play_points >> play_simple
 play_attack >> play_points
 play_decent >> play_attack

 play_decent >  play_points

 me >> play_decent
  ... so there's plenty of room for improvement

Also, updated for the latest Rhombus, which includes the needed pict
and slideshow libraries.

--- a/player/.gitignore
+++ b/player/.gitignore
@@ -1,3 +1,11 @@
+play_never
+play_wrong
 play_random
-play_greedy
+play_simple
+play_points
+play_attack
+play_decent
 play_gui
+
+_zuo.db
+_zuo_tc.db
