avoid building docs

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -43,9 +43,10 @@ jobs:
           make
           cd ..
       - name: "Install raco cross"
-        run: raco pkg install --auto raco-cross
+        run: raco pkg install --auto -D raco-cross
       - name: "Install rhombus"
-        run: raco pkg install --auto rhombus-prototype
+        # pass -D to avoid building docs
+        run: raco pkg install --auto -D rhombus-prototype
       - name: Install Font
         run: |
           wget -O PT_Sans.zip https://fonts.google.com/download?family=PT%20Sans
@@ -58,11 +59,14 @@ jobs:
         with:
           run: make
 
-      - name: "Build for Mac (Arm)"
+      - name: "Build Binaries"
         run: |
           cd player
           mkdir compiled
+          ../zuo/zuo . x86_64-linux gui
           ../zuo/zuo . aarch64-macosx gui
+          ../zuo/zuo . x86_64-macosx gui
+          ../zuo/zuo . x86_64-win32 gui
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
