--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,11 +1,8 @@
 # Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Test and Build Webpage
 
-on:
-  # Runs on pushes targeting the default branch
-  push:
-    branches: ["main"]
-
+on: [push]
+  
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -48,10 +45,10 @@ jobs:
         uses: coactions/setup-xvfb@v1
         with:
           run: make
-      - name: "Install rhombus"
+      - name: Install rhombus
         # pass -D to avoid building docs
         run: raco pkg install --auto -D rhombus-prototype
-      - name: "Build Release Binaries"
+      - name: Build Release Binaries if tagged
         if: startsWith(github.ref, 'refs/tags/')
         run: |
           cd player
@@ -70,7 +67,7 @@ jobs:
           ./zuo/zuo . x86_64-win32 gui
           ls ./compiled
           cd ..
-      - name: Release Binaries
+      - name: Release Binaries if tagged
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
@@ -87,6 +84,12 @@ jobs:
         with:
           # Upload entire repository
           path: './docs'
-      - name: Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages if on Master
         id: deployment
         uses: actions/deploy-pages@v4
+        if: github.ref == 'refs/heads/master'
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: docs-artifact
+          path: docs
