--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,8 +1,7 @@
-# Simple workflow for deploying static content to GitHub Pages
 name: Test and Build Webpage
 
-on: [push]
-  
+on:
+  push:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
