--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,7 +1,9 @@
-name: Test and Build Webpage
+name: Build Webpage and Publish
 
 on:
   push:
+    branches:
+      - main
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -17,89 +19,17 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: "Install Racket"
-        uses: Bogdanp/setup-racket@v1.9
-        with:
-          version: "8.10"
-      - name: "Install raco cross"
-        run: raco pkg install --auto -D raco-cross
-      - name: Install Font
-        run: |
-          wget -O PT_Sans.zip https://fonts.google.com/download?family=PT%20Sans
-          unzip -d pt_sans/ PT_Sans.zip
-          mv pt_sans /usr/share/fonts/
-          fc-cache -fv
-      - uses: actions/checkout@master
-      - name: Install rhombus
-        # pass -D to avoid building docs
-        run: raco pkg install --auto -D rhombus-prototype
-  generate:
-    name: Run tests and generate website
-    needs: setup
-    steps:
-      - name: "Run makefile"
-        uses: coactions/setup-xvfb@v1
-        with:
-          run: make
-      - uses: actions/upload-artifact@v4
-        with:
-          name: docs-artifact
-          path: docs
-
-  release:
-    # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-    # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-    concurrency:
-      group: "release"
-      cancel-in-progress: false
-    name: Release binaries if tagged
-    needs: generate
-    if: startsWith(github.ref, 'refs/tags/')
-    steps:
-      - name: Build Release Binaries
-        run: |
-          cd player
-          git clone https://github.com/racket/zuo.git
-          # install zuo in a sub-folder
-          cd zuo
-          ./configure
-          make
-          cd ..
-          # make compiled folder so zuo doesn't complain
-          mkdir compiled
-          # make all the targets
-          ./zuo/zuo . x86_64-linux gui
-          ./zuo/zuo . aarch64-macosx gui
-          ./zuo/zuo . x86_64-macosx gui
-          ./zuo/zuo . x86_64-win32 gui
-          ls ./compiled
-          cd ..
-      - name: Release Binaries
-        uses: softprops/action-gh-release@v2
-        with:
-          files: |
-            player/compiled/economancy-x86_64-linux.tgz
-            player/compiled/economancy-aarch64-macosx.tgz
-            player/compiled/economancy-x86_64-macosx.tgz
-            player/compiled/economancy-x86_64-win32.zip
-  pages:
     # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
     # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
     concurrency:
       group: "pages"
       cancel-in-progress: false
-    name: Deploy to GitHub Pages on Main
-    needs: generate
-    if: github.ref == 'refs/heads/master'
+    name: Deploy to GitHub Pages
     steps:
+      - name: Setup
+        uses: actions/setup.yml@v1
       - name: Setup Pages
         uses: actions/configure-pages@v4
-      - name: Deploy to GitHub Pages if on Main
+      - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-        if: github.ref == 'refs/heads/master'
-
-      
