--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -26,6 +26,8 @@ jobs:
       cancel-in-progress: false
     name: Deploy to GitHub Pages
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Setup
         uses: ./.github/actions/setup.yml
       - name: Setup Pages
