--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Test and Build Webpage
+name: Release Binaries
 
 on:
   push:
@@ -19,6 +19,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup
         uses: ./.github/actions/setup
+      - name: "Run tests"
+        uses: coactions/setup-xvfb@v1
+        with:
+          run: make
       - name: Build Release Binaries
         run: |
           cd player
