--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,6 +30,15 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup
         uses: ./.github/actions/setup
+      - name: "Run tests"
+        uses: coactions/setup-xvfb@v1
+        with:
+          run: make
+      - name: "Upload artifact"
+        uses: actions/upload-artifact@v4
+        with:
+          name: docs-artifact
+          path: docs
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Deploy to GitHub Pages
