--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,10 +20,13 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup
         uses: ./.github/actions/setup
-      - name: "Run tests"
-        uses: coactions/setup-xvfb@v1
-        with:
-          run: make
+      - name: "Install raco cross"
+        shell: bash
+        run: raco pkg install --auto -D raco-cross
+      - name: Install rhombus
+        shell: bash
+        # pass -D to avoid building docs
+        run: raco pkg install --auto -D rhombus-prototype
       - name: Build Release Binaries
         run: |
           cd player
