--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -14,7 +14,7 @@ permissions:
   id-token: write
 
 jobs:
-  setup:
+  deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -24,7 +24,6 @@ jobs:
     concurrency:
       group: "pages"
       cancel-in-progress: false
-    name: Deploy to GitHub Pages
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -36,6 +35,11 @@ jobs:
           run: make
       - name: Setup Pages
         uses: actions/configure-pages@v4
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload entire repository
+          path: './docs'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
