--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,9 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup
         uses: ./.github/actions/setup
+      - name: Make game
+        uses: coactions/setup-xvfb@v1
+        run: make
       - name: "Install raco cross"
         shell: bash
         run: raco pkg install --auto -D raco-cross
