--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup
         uses: ./.github/actions/setup
-      - name: "Run tests"
+      - name: Make game
         uses: coactions/setup-xvfb@v1
         with:
           run: make
