--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -11,7 +11,7 @@ runs:
     - name: Install Font
       shell: bash
       run: |
-        wget -O PT_Sans.zip https://fonts.google.com/download?family=PT%20Sans
+        wget -O PT_Sans.zip https://fonts.google.com/download?family=PT+Sans
         unzip -d pt_sans/ PT_Sans.zip
         mv pt_sans /usr/share/fonts/
         fc-cache -fv
